--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+	<div id="container"></div>
 	<script src="assets/js/app.js"></script>
+	<script src="assets/js/app.ui.js"></script>
+	<script src="assets/js/app.utils.js"></script>
+	<script src="assets/js/app.debug.js"></script>
 </body>
 </html>
