--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-	<div id="container"></div>
+	<div class="container">
+		<div class="login_area"></div>
+		<div class="info_bar"></div>
+	</div>
 	<script src="assets/js/app.js"></script>
 	<script src="assets/js/app.ui.js"></script>
 	<script src="assets/js/app.utils.js"></script>
