Reorganize csses Add blur effect for password input

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<div class="login_area"></div>
 		<div class="info_bar"></div>
 	</div>
+	<div class="background"></div>
 	<script src="assets/js/app.js"></script>
 	<script src="assets/js/app.ui.js"></script>
 	<script src="assets/js/app.utils.js"></script>
