Add weather UI (WIP)

--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
 	<script src="assets/js/app.ui.js"></script>
 	<script src="assets/js/app.utils.js"></script>
 	<script src="assets/js/app.debug.js"></script>
+	<script src="assets/js/app.weather.js"></script>
 </body>
 </html>
