Added feature of modals and overlay. Assigned settings button with demo modal.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<div class="info_bar"></div>
 	</div>
 	<div class="background"></div>
+	<div class="overlay"></div>
 	<script src="assets/js/app.js"></script>
 	<script src="assets/js/app.ui.js"></script>
 	<script src="assets/js/app.utils.js"></script>
