--- a/index.html
+++ b/index.html
@@ -19,5 +19,7 @@
 	<script src="assets/js/app.utils.js"></script>
 	<script src="assets/js/app.debug.js"></script>
 	<script src="assets/js/app.weather.js"></script>
+	<script src="assets/js/app.settings.js"></script>
+	<script src="assets/js/customselect.js"></script>
 </body>
 </html>
