Add basic i18n support

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<div class="background"></div>
 	<div class="overlay"></div>
 	<script src="assets/js/app.js"></script>
+	<script src="assets/js/app.i18n.js"></script>
 	<script src="assets/js/app.ui.js"></script>
 	<script src="assets/js/app.utils.js"></script>
 	<script src="assets/js/app.debug.js"></script>
