--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	</div>
 	<div class="background"></div>
 	<div class="overlay"></div>
+	<script src="assets/js/AuthService.js"></script>
 	<script src="assets/js/app.js"></script>
 	<script src="assets/js/app.storage.js"></script>
 	<script src="assets/js/app.i18n.js"></script>
